--- a/templates/kiwi/selector.html
+++ b/templates/kiwi/selector.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="{% static 'bootstrap/css/bootstrap.css' %}" rel="stylesheet">
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+    <!--Simple javascript to make easy to make POST with AJAX using Django. Based on django documentation-->
+    <script src="{% static 'bootstrap/js/csrf-solution.js' %}"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -61,30 +67,25 @@
         <td>Size</td>
     </tr>
 </table>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
   </body>
 </html>
 
 <script type="text/javascript">
+    $(function(){
             var options = {
 
     // Required. Called when a user selects an item in the Chooser.
     success: function(files) {
-        //alert("Here's the file link: " + files[0].link)
-        var table = document.getElementById("showlist");
-        for(var i=0; i<files.length; i++){
-            var row = table.insertRow(1);
-            var cell1 = row.insertCell(0);
-            var cell2 = row.insertCell(1);
-            var cell3 = row.insertCell(2);
-           // var img = document.createElement('img');
-            cell1.innerHTML="<img src="+ files[i].icon+">";
-            cell2.innerHTML="<a href="+files[i].link+" target='_blank'>"+files[i].name+"</a>";
-            cell3.innerHTML=files[i].bytes;
-        }
+
+        var jsonString = JSON.stringify(files);
+        $.ajax({
+            url: "dropbox/save",
+            data: {'files':jsonString},
+            type: "POST"
+
+        }).done(function(){
+            location.reload();
+        });
     },
 
     // Optional. Called when the user closes the dialog without selecting a file
@@ -106,8 +107,26 @@
     // only be able to select files with these extensions. You may also specify
     // file types, such as "video" or "images" in the list. For more information,
     // see File types below. By default, all extensions are allowed.
-    extensions: ['.pdf', '.doc', '.docx']
+    extensions: ['.pdf', '.doc', '.docx', '.txt']
 };
             var button = Dropbox.createChooseButton(options);
             document.getElementById("container").appendChild(button);
+        $.ajax("showlist").done(function(data){
+
+            //var f = JSON.parse(data);
+            var files = data["files"];
+
+            var table = document.getElementById("showlist");
+        for(var i=0; i<files.length; i++){
+            var row = table.insertRow(1);
+            var cell1 = row.insertCell(0);
+            var cell2 = row.insertCell(1);
+            var cell3 = row.insertCell(2);
+           // var img = document.createElement('img');
+            cell1.innerHTML="<img src="+ files[i].fields.icon+">";
+            cell2.innerHTML="<a href="+files[i].fields.link+" target='_blank'>"+files[i].fields.name+"</a>";
+            cell3.innerHTML=files[i].fields.size;
+        }
+        });
+        });
         </script>
